[package]
name = "watarikani"
version = "0.2.0"
authors = ["The FrugalOS Developers"]
homepage = "https://github.com/frugalos/watarikani"
repository = "https://github.com/frugalos/watarikani"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"

[dependencies]
cannyls = "0.10"
cannyls_rpc = "0.2"
fibers = "*"
fibers_rpc = "*"
futures = "*"
trackable = "*"
clap = "*"
structopt = "*"
