[package]
name = "watarikani"
version = "0.2.0"
authors = ["The FrugalOS Developers"]
homepage = "https://github.com/frugalos/watarikani"
repository = "https://github.com/frugalos/watarikani"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"

[dependencies]
cannyls = "0.10"
cannyls_rpc = "0.2"
fibers = "0.1"
fibers_rpc = "0.2"
futures = "0.1"
trackable = "0.2"
clap = "2"
structopt = "0.2"
